增加購買頁連結

--- a/en/diamond.html
+++ b/en/diamond.html
@@ -151,7 +151,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden cloth popular en">
                                                 <img src="../images/diamonds_01.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">35 THB</a>
+                                                <a name="btn" href="https://payment-app.maruay99.com/" class="btn btn-outline-warning w-100">35 THB</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -159,7 +159,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="../images/diamonds_02.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">139 THB</a>
+                                                <a name="btn" href="https://payment-app.maruay99.com/" class="btn btn-outline-warning w-100">139 THB</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -167,7 +167,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="../images/diamonds_03.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">349 THB</a>
+                                                <a name="btn" href="https://payment-app.maruay99.com/" class="btn btn-outline-warning w-100">349 THB</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -175,7 +175,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="../images/diamonds_04.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">699 THB</a>
+                                                <a name="btn" href="https://payment-app.maruay99.com/" class="btn btn-outline-warning w-100">699 THB</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -183,7 +183,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="../images/diamonds_05.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">1000 THB</a>
+                                                <a name="btn" href="https://payment-app.maruay99.com/" class="btn btn-outline-warning w-100">1000 THB</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -191,7 +191,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden cloth best">
                                                 <img src="../images/diamonds_05.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">2800 THB</a>
+                                                <a name="btn" href="https://payment-app.maruay99.com/" class="btn btn-outline-warning w-100">2800 THB</a>
                                                 </div>
                                             </div>
                                         </div>
