--- a/th/index.html
+++ b/th/index.html
@@ -15,14 +15,15 @@
     <link rel="icon" href="../images/logo.png" type="image/x-icon">
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6C118VZKK9"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-220529575-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-6C118VZKK9');
+        gtag('config', 'UA-220529575-1');
     </script>
+
 </head>
 <body>
     <nav class="title-nav position-fixed navbar navbar-expand-lg navbar-dark bg-dark align-items-center justify-content-end w-100 top-0">
